Add audio transitions and card dealing animation
- Enhanced AudioManager with fade in/out transitions, volume control, and one-shot sound effects
- Added audio transition when transitioning from menu to game screen
- Added card dealing animation showing cards flying to each player
- Added MenuSelectionClick audio for menu clicks
- Added cardPlayed audio when playing cards
- Added game background music (backGame) with fade-in when game starts

Co-authored-by: Mxtte14 <185956627+Mxtte14@users.noreply.github.com>